gccida/c3/doing_eh
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/doing_eh/src/except.c:844:20: error: use of undeclared identifier 'doing_eh_warned'
if ( !do_warn || ( doing_eh_warned & 1) != 0 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/doing_eh/src/except.c:847:1: error: use of undeclared identifier 'doing_eh_warned'
doing_eh_warned = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/doing_eh/src/obj/except.o] Error 1
